// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid/> Debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3>
    naruto
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Algo"
      url="https://www.google.com"
    />
    <GifGridItem
      id="DEF"
      key="DEF"
      title="Algo Dos"
      url="https://www.google.com"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid/> Debe de mostrarse correctamente 1`] = `
<Fragment>
  <h3>
    naruto
  </h3>
  <p
    className="card animate__animated animate__flash"
  >
    Loading....
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
